--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -12,7 +12,21 @@ body {
     color: #333;
     background-color: #f4f4f4;
     margin: 0;
+
+    
 }
+
+body {
+    background-image: url('
+https://github.com/gersol12/roger.github.io/blob/main/rockchip.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0;
+    height: 100vh;
+    color: white;
+}
+
 
 /* Container for max-width */
 .container {
