--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -16,9 +16,9 @@ body {
     
 }
 
+/* styles.css */
 body {
-    background-image: url('
-https://github.com/gersol12/roger.github.io/blob/main/rockchip.jpeg');
+    background-image: url('https://github.com/gersol12/roger.github.io/blob/main/rockchip.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
