--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -79,7 +79,7 @@ nav ul li a:hover {
 
 /* Hero Section (Home) */
 #home {
-    background: url('hero-bg.jpg') no-repeat center center/cover;
+    background: url('https://github.com/gersol12/roger.github.io/blob/main/rochchipcss-1.css') no-repeat center center/cover;
     height: 100vh;
     display: flex;
     justify-content: center;
