--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -69,6 +69,8 @@ nav ul li a:hover {
 /* Hero Section (Home) */
 #home {
     background: url('https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg') no-repeat center center/cover; /* Updated URL */
+background-size: 300px 200px; /* Width x Height in pixels */
+}
     height: 100vh;
     display: flex;
     justify-content: center;
