--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -68,9 +68,9 @@ nav ul li a:hover {
 
 /* Hero Section (Home) */
 #home {
-    background: url('https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg') no-repeat center center/cover; /* Updated URL */
-}
-    height: 50vh;
+    background: url('https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg') no-repeat center center;
+    background-size: 300px 200px; /* Change to desired size */
+    height: 100vh; /* Full height of the viewport */
     display: flex;
     justify-content: center;
     align-items: center;
