--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -69,7 +69,7 @@ nav ul li a:hover {
 /* Hero Section (Home) */
 #home {
     background: url('https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg') no-repeat center center;
-    background-size: 400px 200px; /* Change to desired size */
+    background-size: cover; /* Ensures the image covers the section */
     height: 100vh; /* Full height of the viewport */
     display: flex;
     justify-content: center;
