--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -68,13 +68,13 @@ nav ul li a:hover {
 
 /* Hero Section (Home) */
 #home {
-    background: url('https://github.com/gersol12/roger.github.io/blob/main/bgmain.jpeg') no-repeat center center;
-    background-size: cover; /* Scales the image to cover the section */
-    height: 100vh; /* Full viewport height */
+    background: url('https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg') no-repeat center center;
+background-size: 1000px 800px; /* Change to desired width and height */
+    height: 100vh; /* Full height of the viewport */
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #fff; /* Text color */
+    color: #fff;
     text-align: center;
 }
 
