--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -68,8 +68,8 @@ nav ul li a:hover {
 
 /* Hero Section (Home) */
 #home {
-    background: url('https://raw.githubusercontent.com/gersol12/roger.github.io/main/reb.jpeg') no-repeat center center;
-background-size: 400px 200px; /* Change to desired width and height */
+    background: url('https://raw.githubusercontent.com/gersol12/roger.github.io/main/bgmain.jpeg') no-repeat center center;
+background-size: 300px 100px; /* Change to desired width and height */
     height: 100vh; /* Full height of the viewport */
     display: flex;
     justify-content: center;
