--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -68,7 +68,7 @@ nav ul li a:hover {
 
 /* Hero Section (Home) */
 #home {
-    background: url('https://raw.githubusercontent.com/gersol12/roger.github.io/main/bgmain.jpeg') no-repeat center center;
+    background: url('https://raw.githubusercontent.com/gersol12/roger.github.io/main/bgphoto1.jpeg') no-repeat center center;
     background-size: cover; /* Make the background cover the entire section */
     height: 100vh; /* Full height of the viewport */
     display: flex;
