--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -84,8 +84,13 @@ nav ul li a:hover {
 }
 
 /* Make the specific texts white */
-#home h2, /* Targets the h2 element */
-#home p {  /* Targets the paragraph */
+#home h2 {
+    font-size: 64px; /* Increase the font size for h2 */
+}
+
+#home p {
+    font-size: 24px; /* Increase the font size for paragraph */
+}/
     color: #fff; /* Set font color to white */
 }
 
