--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -103,6 +103,7 @@ nav ul li a:hover {
 
 /* Header Styles */
 header {
+        background-color: rgba(51, 51, 51, 0); /* Semi-transparent background */
     background-color: #333;
     color: #fff;
     padding: 20px 0;
