--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -73,7 +73,7 @@ nav ul li a:hover {
     max-width: 600px;           /* Set max width to control layout */
     border-radius: 10px;        /* Rounded corners for a smoother look */
     background-color: #333;     /* Set background color to grey */
-
+}
 
 .appointment-section h1 {
     font-size: 14px; /* Reduced size for "Book An Appointment" */
