--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -65,7 +65,7 @@ nav ul li a:hover {
 }
 
 /* Center the "Book An Appointment" section and add a border */
-."appointment-section" {
+.appointment-section {
     text-align: center;          /* Center the text */
     margin: 0px ;          /* Auto margin to center the div */
     padding: 3px;               /* Add some padding for space */
@@ -76,12 +76,12 @@ nav ul li a:hover {
 }
 
 .appointment-section h1 {
-    font-size: 8px !important; /* Force size for "Book An Appointment" */
+    font-size: 14px !important; /* Force size for "Book An Appointment" */
     color: #fff; /* Keep text color white */
 }
 
 .appointment-section p {
-    font-size: 5px !important; /* Force size for phone number */
+    font-size: 10px !important; /* Force size for phone number */
     color: #FFA500; /* Keep text color white */
 }
 /* Navigation Styles */
