--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -78,13 +78,14 @@ nav ul li a:hover {
 
 /* Center the "Book An Appointment" section and add a border */
 .appointment-section {
+    background-color: rgba(51, 51, 51, 0.8); /* Semi-transparent background */
     text-align: center;          /* Center the text */
     margin: 0px;                /* Auto margin to center the div */
     padding: 3px;               /* Add some padding for space */
     border: 2px solid #000000;  /* Border */
     max-width: 400px;           /* Set max width to control layout */
     border-radius: 5px;        /* Rounded corners for a smoother look */
-    background-color: #000;     /* Set background color to grey */
+    background-color: #333;     /* Set background color to grey */
 }
 
 .appointment-section h1 {
