--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -81,8 +81,8 @@ nav ul li a:hover {
     text-align: center;          /* Center the text */
     margin: 1px;                /* Auto margin to center the div */
     padding: 1px;               /* Add some padding for space */
-    border: 1.5px solid #0000FF;  /* Border */
-    max-width: 115px;           /* Set max width to control layout */
+    border: 1.5px solid #FFFFFF;  /* Border */
+    max-width: 130px;           /* Set max width to control layout */
     border-radius: 4px;        /* Rounded corners for a smoother look */
     background-color: rgba(51, 51, 51, 0); /* 50% transparency */
 }
