--- a/rochchipcss-1.css
+++ b/rochchipcss-1.css
@@ -77,7 +77,7 @@ nav ul li a:hover {
 }
 
 
-* Center the "Book An Appointment" section and add a border */
+/* Center the "Book An Appointment" section and add a border */
 .appointment-section {
     text-align: center;          /* Center the text */
     margin: 4px auto;                /* Auto margin to center the div */
